--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ jobs:
     - name: install target
       run: rustup target install ${{ matrix.target }}
     - name: Build
-      run: cargo build --verbose --all-targets
+      run: cargo build --verbose --all-targets --release
     - name: Run tests
       run: cargo test --verbose
     - name: Create Release
@@ -44,6 +44,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./target/debug/crd-yaml-to-markdown
+        asset_path: target/release/crd_yaml_to_markdown
         asset_name: crd-yaml-to-markdown-${{ matrix.target }}
         asset_content_type: application/octet-stream
