--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,7 +44,7 @@ jobs:
         override: true
     - uses: actions-rs/cargo@v1
       with:
-        use-cross: true
+        use-cross: false
         command: build
         args: --target ${{ matrix.target }}
     - name: Build
