--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,7 +47,7 @@ jobs:
         override: true
     - uses: actions-rs/cargo@v1
       with:
-        use-cross: true
+        use-cross: false
         command: build
         toolchain: nightly
         args: --target ${{ matrix.target }}
