--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,9 +40,9 @@ jobs:
         - aarch64-apple-darwin
     steps:
     - name: Update
-      run: apt-get update
+      run: sudo apt-get update
     - name: install dependencies
-      run: apt-get install -y build-essential
+      run: sudo apt-get install -y build-essential
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
       with:
