--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,9 +54,7 @@ jobs:
         use-cross: false
         command: build
         toolchain: nightly
-        args: --target ${{ matrix.target }}
-    - name: Build
-      run: cargo build --verbose  --release --target ${{ matrix.target }}
+        args: --target=${{ matrix.target }}  --release
     - name: Run tests
       run: cargo test --verbose
     - name: Upload Release Asset
