--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,9 +49,10 @@ jobs:
         toolchain: nightly
         target: ${{ matrix.target }}
         override: true
+        profile: minimal
     - uses: actions-rs/cargo@v1
       with:
-        use-cross: false
+        use-cross: true
         command: build
         toolchain: nightly
         args: --target=${{ matrix.target }}  --release
