--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,7 +47,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
-        target: ${{ matrix.target }}
+        target: "${{ matrix.target }}"
         override: true
         profile: minimal
     - uses: actions-rs/cargo@v1
@@ -55,7 +55,7 @@ jobs:
         use-cross: true
         command: build
         toolchain: nightly
-        args: --target=${{ matrix.target }}  --release
+        args: --target="${{ matrix.target }}"  --release
     - name: Run tests
       run: cargo test --verbose
     - name: Upload Release Asset
