--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
         profile: minimal
     - uses: actions-rs/cargo@v1
       with:
-        use-cross: true
+        use-cross: false
         command: build
         toolchain: nightly
         args: --target="${{ matrix.target }}"  --release
