--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,20 +42,14 @@ jobs:
     - name: Update
       run: sudo apt-get update && sudo apt-get upgrade
     - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        target: ${{ matrix.target }}
-        override: true
-        profile: minimal
-    - uses: actions-rs/cargo@v1
-      with:
-        use-cross: false
-        command: build
-        toolchain: nightly
-        args: --target=${{ matrix.target }}  --release
+    - name: Update RustUp
+      run: rustup update
+    - name: Install nightly toolchain
+      run: rustup toolchain add nightly --profile complete --target ${{ matrix.target }}
     - name: Run tests
       run: cargo test --verbose
+    - name: Build
+      run: cargo build --release --all-targets --all-features --verbose --target ${{ matrix.target }}
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
