--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get upgrade && sudo apt-get install build-essential
     - uses: actions/checkout@v2
     - name: Install rustup
-      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
     - name: Update RustUp
       run: rustup update
     - name: Install nightly toolchain
