--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,13 +45,13 @@ jobs:
     - name: Install rustup
       run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
     - name: Update RustUp
-      run: rustup update
+      run: source $HOME/.cargo/env && rustup update
     - name: Install nightly toolchain
-      run: rustup toolchain add nightly --profile complete --target ${{ matrix.target }}
+      run: source $HOME/.cargo/env && rustup toolchain add nightly --profile complete --target ${{ matrix.target }}
     - name: Run tests
-      run: cargo test --verbose
+      run: source $HOME/.cargo/env && cargo test --verbose
     - name: Build
-      run: cargo build --release --all-targets --all-features --verbose --target ${{ matrix.target }}
+      run: source $HOME/.cargo/env && cargo build --release --all-targets --all-features --verbose --target ${{ matrix.target }}
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
