--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,16 @@ jobs:
       run: rustup update
     - name: Install nightly toolchain
       run: rustup toolchain add nightly --profile complete --target ${{ matrix.target }}
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: install cross
+      run: cargo install cross
     - name: Build
-      run: cargo build --release --all-targets --all-features --verbose --target ${{ matrix.target }}
+      run: cross build --target  --target ${{ matrix.target }}
+    - name: Run tests
+      run: cross test --verbose
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
