--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ jobs:
     - name: Update RustUp
       run: rustup update
     - name: Build
-      run: cross build --all-targets --release --verbose
+      run: cargo build --all-targets --release --verbose
     - name: Run tests
-      run: cross test --verbose
+      run: cargo test --verbose
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -61,9 +61,9 @@ jobs:
     - name: Update RustUp
       run: rustup update
     - name: Build
-      run: cross build --all-targets --release --verbose
+      run: cargo build --all-targets --release --verbose
     - name: Run tests
-      run: cross test --verbose
+      run: cargo test --verbose
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
@@ -82,9 +82,9 @@ jobs:
     - name: Update RustUp
       run: rustup update
     - name: Build
-      run: cross build --all-targets --release --verbose
+      run: cargo build --all-targets --release --verbose
     - name: Run tests
-      run: cross test --verbose
+      run: cargo test --verbose
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
