--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: target/release/crd_yaml_to_markdown
-        asset_name: crd-yaml-to-markdown-windows
+        asset_path: target/release/crd_yaml_to_markdown.exe
+        asset_name: crd-yaml-to-markdown-windows.exe
         asset_content_type: application/octet-stream
   build_macos:
     runs-on: macos-latest
